# oec-pro-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  oec-pro.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  oec-pro.rockspec  oec-pro_sdk.lua  oec-pro_types.lua
php/: AGENTS.md  (+7 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  oecpro_sdk.py  oecpro_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  utility_type.py
py/entity/: country_entity.py  product_entity.py  trade_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  metrics_feature.py  netsim_feature.py  paging_feature.py  streaming_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_country_direct.py  test_country_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_product_direct.py  test_product_entity.py  test_readme_examples.py  test_trade_direct.py  test_trade_entity.py
py/utility/: clean.py  done.py  feature_hook.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_spec.py  prepare_auth.py  prepare_path.py  result_basic.py  transform_request.py
(+447 files in other folders)
